# chypss

./: .gitignore  CMakeLists.txt  MFEM_Notes.rst  NOTES.rst
chyps/: CMakeLists.txt  boundary_condition.cpp  boundary_condition.hpp  boundary_condition_manager.cpp  boundary_condition_manager.hpp  conduction_operator.cpp  conduction_operator.hpp  conduction_operator_base.cpp  conduction_operator_base.hpp  conductivity.cpp  conductivity.hpp  debug_assert.hpp  dummy_precice_setter.cpp  example_copy.cpp  git.cpp.in  git.hpp  heat_solver.cpp  heat_solver.hpp  initializer_main.cpp  input_parser.cpp  input_parser.hpp  input_parser.tpp  io.cpp  io.hpp  io.tpp  logger.cpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  mfem_adios2_collection.cpp  mfem_adios2_collection.hpp  mfem_coefficients.cpp  mfem_coefficients.hpp  mfem_mesh_generator.cpp  mfem_mesh_generator.hpp  mfem_visit_collection.cpp  mfem_visit_collection.hpp  monitor_file.cpp  monitor_file.hpp  (+16 more)
chyps/simulation_configurations/: attribute_varying.cpp  attribute_varying.hpp  configuration_initializer_interface.hpp  constant.cpp  constant.hpp  cooled_rod.cpp  cooled_rod.hpp  function.cpp  function.hpp  quadratic_pulse.cpp  quadratic_pulse.hpp
chypss/: CMakeLists.txt  conduction_operator.hpp  euler.cpp  euler.hpp  heat.cpp  heat_solver.hpp  main.cpp  precice_adapter.cpp  precice_adapter.hpp
cmake/Modules/: FindHypre.cmake  FindMetis.cmake  FindMfem.cmake  FindPetsc.cmake  FindPrecice.cmake  FindSpdlog.cmake
data/: concentric_circles.msh  precice-config.xml
docs/: .gitignore  Doxyfile  Makefile  conf.py  index.rst
examples/ConcentricCylinder/: input.json
examples/Precice/: input.json  precice-config.xml
tests/: CMakeLists.txt
tests/helper/: command_line_input.hpp  compute_error.hpp  convergence_runner.hpp
tests/unit/: CMakeLists.txt  input_parser_test.cpp  main.cpp
tests/unit/parallel/: CMakeLists.txt  io_test.cpp  main.cpp  mpi_session.hpp
tests/unit/serial/: CMakeLists.txt  input_parser_test.cpp
tests/unit/serial/data/: test_input.json
tests/verification/: CMakeLists.txt  checkpoint_test.cpp  constant_coefficient_linear_heat_equation_test.cpp  dirichlet_test.cpp  exact_analytical_toolbox_thermal_test.cpp  linear_heat_equation_test.cpp  main.cpp  mpi_session.cpp
tests/verification/data/: checkpoint_highorder_test_input.json  checkpoint_loworder_test_input.json  dirichlet_bottom_test_input.json  dirichlet_left_test_input.json  dirichlet_right_test_input.json  dirichlet_solution_test_input.json  dirichlet_top_test_input.json  exact_analytical_conduction_toolbox_X1C11B00T11.json  exact_analytical_conduction_toolbox_X1C12B00T0.json  exact_analytical_conduction_toolbox_X1C12B00T11.json  homogeneous_constant_coefficient_linear_heat.json  homogeneous_constant_coefficient_linear_heat_hn_bot.json  homogeneous_constant_coefficient_linear_heat_hn_left.json  homogeneous_constant_coefficient_linear_heat_hn_right.json  homogeneous_constant_coefficient_linear_heat_hn_top.json  homogeneous_constant_coefficient_linear_heat_hn_top_attr_matrix.json  homogeneous_constant_coefficient_linear_heat_hn_top_attr_scalar.json  homogeneous_constant_coefficient_linear_heat_hn_top_element_matrix.json  homogeneous_constant_coefficient_linear_heat_hn_top_element_scalar.json  homogeneous_constant_coefficient_linear_heat_hn_top_matrix.json  homogeneous_tensor_coefficient.json  homogeneous_tensor_coefficient_rotated.json  neumann_cooled_rod.json
tools/: run_scaling_2d.py  run_scaling_3d.py
